2008-09-17  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-sbcl.lisp (make-definition-source-location): Fix typo
	introduced with crlf-related commit on 2008-09-16.

2008-09-17  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-test-find-top-level-restart): New function.
	[def-slime-test] (interrupt-at-toplevel, interrupt-in-debugger):
	Use it.

2008-09-16  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-connection): Optionally select a new default
	connection.
	(slime-auto-select-connection): New variable.
	(slime-auto-select-connection): New function.

2008-09-16  Helmut Eller  <heller@common-lisp.net>

	Adjust positions in files with CRLF style end-on-line markers.

	* slime.el (slime-eol-conversion-fixup): New function.
	(slime-goto-location-position): Use it.  Also add a new position
	type :offset, so that we don't adjust offsets in strings that were
	sent over the wire (which uses LF eol-convention).

	* swank-abcl.lisp
	* swank-allegro.lisp
	* swank-clisp.lisp
	* swank-cmucl.lisp
	* swank-corman.lisp
	* swank-ecl.lisp
	* swank-lispworks.lisp
	* swank-openmcl.lisp
	* swank-sbcl.lisp
	* swank-scl.lisp: Create :offset style positions where needed.

	* swank-lispworks.lisp (skip-comments): New function.
	(dspec-stream-position): Use it.

2008-09-16  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-end-of-list): `backward-down-list' was used
	there which is defined by paredit.el.
	Use `(down-list -1)' instead.

2008-09-15  Helmut Eller  <heller@common-lisp.net>

	* swank-lispworks.lisp (describe-symbol-for-emacs): Revert last
	change.

2008-09-15  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (sldb-loop): Send a :sldb-return event to ourselfes
	to inform the debug session at the lower level.
	(wait-for-event): Drop the report-interrupt argument.  No longer
	needed.
	(event-match-p): Add an OR pattern operator.  Used to wait for
	different events simultaneously.
